# rcai-virtual-track

./: .gitignore  README.md  architectural.md  discover_socat.py  main.py  pyproject.toml  spec.md
.agents/: GLOBAL_RULES.md
config/: track.json
docs/: checkpoint.md  deterministic_scheduler.md  event_bus.md  execution_plan.md  hardware_adapter_contract.md  protocol_spec_rcai_arduino.md  rcai_arduino_wire_protocol.md  runtime_execution_model.md
orchestrator/: lane_assignment.py  lap_generator.py  race_runtime.py
scripts/: run_tests.py
src/adapters/protocol/: constants.py  messages.py  parser.py
src/rcai_virtual_track.egg-info/: PKG-INFO  SOURCES.txt
tests/adapters/protocol/: test_parser.py
tools/: homologate_transport.py  manual_homologation.py
track_interface/: arduino_emulator.py  gpio_runtime.py  serial_protocol.py
vehicle_profiles/: profile_manager.py  profiles.json
